# trustoo-crawler

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  dprint.json  pyproject.toml  scrapy.cfg
tests/: utils.py
tests/test_gouden_gids/: test_spider.py
tests/test_gouden_gids/responses/: backer_and_mckenzie.html  breewel_payment_options.html  hendricks_short_description.html  lawyers_front_page.html  lawyers_search_p1.html
tests/test_gouden_gids/responses/backer_and_mckenzie_files/: detail.min.js
tests/test_gouden_gids/responses/breewel_payment_options_files/: style.min.css
tests/test_gouden_gids/responses/hendricks_short_description_files/: common.min.js
tests/test_gouden_gids/responses/lawyers_front_page_files/: results.min.js
tests/test_gouden_gids/responses/lawyers_search_p1_files/: leaflet.min.css
trustoo_crawler/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
trustoo_crawler/spiders/: gouden_gids.py  gouden_gids_lawyers.py
