[tool.poetry]
name = "trustoo-crawler"
version = "0.1.0"
description = ""
authors = ["Ivan Yordanov <hi@ivanyordanov.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
scrapy-user-agents = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.9"
pyright = "^1.1.367"
pre-commit = "^3.7.1"

[tool.pyright]
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"

reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
# FIXME: causes issues on Python 3.10
# reportIncompatibleVariableOverride = "warning"
# reportIncompatibleMethodOverride = "warning"

[tool.ruff]
output-format = "grouped"
show-fixes = true
target-version = "py312"
extend-exclude = ["tests/*snapshots/*"]

[tool.ruff.lint]
ignore = [
  # Rules in conflict with `ruff-format` -- START
  "W191", # Checks for indentation that uses tabs. Spaces are preferred.
  # "E111", # Checks for indentation with a non-multiple of 4 spaces, add when out of nursery
  # "E114", # Checks for indentation of comments with a non-multiple of 4 spaces, add when out of nursery
  # "E117", # Checks for over-indented code, add when out of nursery
  "E501", # Line too long
  "D206", # Checks for docstrings that are indented with tabs.
  "D300", # Checks for docstrings that use '''triple single quotes''' instead of """triple double quotes""".
  "Q000", # Checks for inline strings that use single quotes.
  "Q001", # Checks for multiline strings that use single quotes
  "Q002", # Checks for docstrings that use single quotes.
  "Q003", # Checks for strings that include escaped quotes.
  "COM812", # Checks for the absence of trailing commas.
  "COM819", # Checks for the presence of prohibited trailing commas.
  "ISC001", # Checks for implicitly concatenated strings on a single line.
  "ISC002", # Checks for implicitly concatenated strings that span multiple lines.
  # Rules in conflict with `ruff-format` -- END
  "D1", # Missing docstring for {} -- Inconvenient to enforce
  # The following "D" rules do not correspond to our coding style. We use the pep257 convention, but
  # "D212" should not be ignored. In ruff (0.0.291) we cannot select a rule that is excluded by specifying
  # a convention, hence our only option is to manually replicate it.
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "D214", # Section is over-indented ("{name}")
  "D215", # Section underline is over-indented ("{name}")
  "D404", # First word of the docstring should not be "This"
  "D405", # Section name should be properly capitalized ("{name}")
  "D406", # Section name should end with a newline ("{name}")
  "D407", # Missing dashed underline after section ("{name}")
  "D408", # Section underline should be in the line following the section's name ("{name}")
  "D409", # Section underline should match the length of its name ("{name}")
  "D410", # Missing blank line after section ("{name}")
  "D411", # Missing blank line before section ("{name}")
  "D413", # Missing blank line after last section ("{name}")
  "D415", # First line should end with a period, question mark, or exclamation point
  "D416", # Section name should end with a colon ("{name}")
  "D417", # Missing argument description in the docstring for {definition}: {name}
  "B009", # Do not call getattr with a constant attribute value. -- Not always applicable
  "B010", # Do not call setattr with a constant attribute value. -- Not always applicable
  "RUF012", # type class attrs with `ClassVar` -- Too strict/trigger-happy
  "UP007", # Use X | Y for type annotations -- `typer` doesn't support it
  "PIE804", # Unnecessary `dict` kwargs -- Inconvenient to enforce
  "RET505", # Unnecessary {branch} after return statement -- Lots of false positives
  "RET506", # Unnecessary {branch} after raise statement -- Lots of false positives
  "RET507", # Unnecessary {branch} after continue statement -- Lots of false positives
  "RET508", # Unnecessary {branch} after break statement -- Lots of false positives
  "PLR09", # upper bound on number of arguments, functions, etc. -- Inconvenient to enforce
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable -- Inconvenient to enforce
  "PLW2901", # `for` loop variable `{var}` overwritten by assignment target -- Inconvenient to enforce
  "TRY002", # Create your own exception -- Inconvenient to enforce
  "TRY003", # Avoid specifying long messages outside the exception class -- Inconvenient to enforce
]
select = [
  "F", # Pyflakes
  "E", # pycodestyle Errors
  "W", # pycodestyle Warnings
  "C90", # mccabe
  "I", # isort
  "D", # pydocstyle
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "INP", # flake8-no-pep420
  "RUF", # Ruff-specific rules
  "YTT", # flake8-2020
  "ASYNC", # flake8-async
  "BLE", # flake8-blind-except
  "COM", # flake8-commas
  "C4", # flake8-comprehensions
  "T10", # flake8-debugger
  "EM", # flake8-errmsg
  "FA", # flake8-future-annotations
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLOT", # flake8-slots
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "PGH", # pygrep-hooks
  "PL", # Pylint
  "TRY", # tryceratops
  # "FURB", # refurb, add when out of nursery
  # "LOG", # flake8-logging, add when out of nursery
]
task-tags = ["TODO", "HACK", "FIXME", "XXX"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*/__init__.py" = ["F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
